Save to db ok Make reports.

--- a/csv-simple-parser/src/main/resources/application.properties
+++ b/csv-simple-parser/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 server.port: 8082
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/testdb1
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.initialization-mode=ALWAYS
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
