--- a/csv-simple-parser/pom.xml
+++ b/csv-simple-parser/pom.xml
@@ -51,11 +51,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		<!--  <dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
-		</dependency>
+			<scope>runtime</scope> 
+		</dependency> -->
 	</dependencies>
 
 	<build>
